--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="item last-row" id="item7"></div>
         <div class="item last-row" id="item8"></div>
         <div class="item last-row" id="item9"></div>
-        <!-- <div class="winLine"></div> win line -->
+        <p id="winText">Player x won!</p>
     </main>
 
 
